assets/css/style.scss
---
---

@import
  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
  "minima/initialize";

.contact-list {
    margin: 0;
}

.social-media-list {
    margin: 0 0 0 auto;
}

.post-list-narrow > li {
    margin-bottom: $spacing-unit * 0.5;
}

.post-list-separator {
    color: $lm-border-color-01;
    background-color: $lm-border-color-01;
    border: none;
    height: 1px;
}

.post-meta > a {
    color: inherit;
}

.figure {
    margin: 2em auto;
}

img, .pdf {
    border-radius: 10px;
    box-shadow: 0 0 5px 0 #00000022;
}

img.figure {
    display: block;
}

.figure + em, .figcaption {
    display: block;
    margin: -1.5em auto 2em;
    text-align: center;
    color: $lm-brand-color-dark;
}

.project {
    display: flex;
    align-items: center;
    margin: 50px 0;

    @media only screen and (max-width: 600px) {
        flex-direction: column;

        * {
            h3 {
                margin-top: 0;
                margin-bottom: 4px;
            }
        }

        :has(img) {
            order: -1;
        }

        .carousel__holder {
            margin-bottom: 15px;
        }
    }

    @media only screen and (min-width: 600px) {
        flex-direction: row;
        gap: 30px;
        
        * {
            flex: 3;
            margin: 0;
    
            h3 {
                margin-top: -10px;
            }
        }

        :has(img) {
            flex: 2;
        }
    }
}

.project-vertical {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 50px 0;
    
    * {
        h3 {
            margin-top: 0;
            margin-bottom: 4px;
        }
    }

    :has(img), .carousel__holder {
        order: -1;
    }

    .carousel__holder {
        padding-bottom: min(300px, 100%);
        margin-bottom: 15px;
    }

    img {
        max-height: 300px;
    }
}

.imgrow {
    border-radius: 10px;
    border: 0;
    box-shadow: 0 0 5px 0 #00000022;

    img {
        max-height: 200px;
    }

    th {
        display: none;
    }

    td {
        padding: 5px 10px;
        border: 0;

        img {
            margin: 8px 5px;
        }
    }
}

.book {
    display: inline-block;
    width: max-content;
}

.tierlist {
    border-radius: 10px;
    border: 0;
    box-shadow: 0 0 5px 0 #00000022;

    img {
        border-radius: 5px;
        max-height: 100px;
    }

    th:nth-child(1), td:nth-child(1) {
        border: 0;
        padding: 0;
        text-align: center;
    }

    th:nth-child(1) {
        border-top-left-radius: 10px;
    }

    th:nth-child(2) {
        border-top-right-radius: 10px;
    }

    tr:last-child {
        td:nth-child(1) {
            border-bottom-left-radius: 10px;
        }

        td:nth-child(2) {
            border-bottom-right-radius: 10px;
        }
    }

    th:nth-child(1) {
        background: #F08080;
        min-width: 50px;
    }

    td:nth-child(1) {
        font-weight: bold;
        min-width: 50px;
    }

    td:nth-child(2), th:nth-child(2) {
        padding: 2px 4px;
        width: 100%;

        img {
            margin: 3px 2px;
        }
    }
    
    tr:nth-child(1) > td:nth-child(1) {
        background: #FFA07A;
    }
    
    tr:nth-child(2) > td:nth-child(1) {
        background: #FAFAD2;
    }

    tr:nth-child(3) > td:nth-child(1) {
        background: #90EE90;
    }

    tr:nth-child(4) > td:nth-child(1) {
        background: #20B2AA;
    }
    
    tr:nth-child(5) > td:nth-child(1) {
        background: #7B68EE;
    }
    
    th:nth-child(2) {
        background: #FFFFFF;
    }
    
    tr:nth-child(odd) > td:nth-child(2) {
        background: #F6F8FA;
    }
    
    tr:nth-child(even) > td:nth-child(2) {
        background: #FFFFFF;
    }
}

.tooltip-container {
    position: relative;
}

.tooltip-container .tooltip {
    display: none;
    z-index: 1;

    position: absolute;
    left: 50%;
    bottom: 100%;
    margin-bottom: 5px;

    width: max-content;
}

.tooltip-container:hover .tooltip {
    display: initial;
}

.tooltip-container .tooltip::after {
    content: " ";

    position: absolute;
    top: 100%;
    left: 0%;
    transform: translateX(-50%);

    border-width: 5px;
    border-style: solid;
    border-color: #333 transparent transparent transparent;
}

.tooltip-container .tooltip-text {
    position: relative;
    left: -50%;


    width: max-content;
    max-width: 200px;
    padding: 5px 8px;

    border-radius: 6px;

    background-color: #333;
    color: #fff;

    text-align: center;
}

